// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile e huge 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 0px;
}

.IS1 {
  width: 100%;
  margin-bottom: 10px;
}

.IS2 {
  font-size: 20px;
  line-height: 20px;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": "10px",
      "paddingVertical": "15px",
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={0.8}
    className="IS1"
    fill={true}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1434%2C1792%2C627%2C0"
  />
  <div
    className="css-view-1dbjc4n"
  >
    <div
      className="css-view-1dbjc4n r-marginBottom-p1pxzi S1"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </div>
    <h3
      aria-level="3"
      className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontWeight-16dba41 r-marginBottom-p1pxzi IS2 S2"
      role="heading"
    >
      This is tile headline
    </h3>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </div>
</Link>
`;

exports[`tile e medium 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 0px;
}

.IS1 {
  width: 100%;
  margin-bottom: 10px;
}

.IS2 {
  font-size: 20px;
  line-height: 20px;
}
</style>

<Link
  linkStyle={
    Object {
      "padding": "10px",
      "paddingTop": "15px",
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={0.8}
    className="IS1"
    fill={true}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1434%2C1792%2C627%2C0"
  />
  <div
    className="css-view-1dbjc4n"
  >
    <div
      className="css-view-1dbjc4n r-marginBottom-p1pxzi S1"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </div>
    <h3
      aria-level="3"
      className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontWeight-16dba41 r-marginBottom-p1pxzi IS2 S2"
      role="heading"
    >
      This is tile headline
    </h3>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </div>
</Link>
`;

exports[`tile e small 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-size: 22px;
  font-weight: 400;
  margin-bottom: 5px;
}

.IS1 {
  width: 50%;
}

.IS2 {
  line-height: 22px;
}

.IS3 {
  padding-bottom: 5px;
  padding-left: 10px;
  width: 50%;
}
</style>

<Link
  linkStyle={
    Object {
      "flexDirection": "row",
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={0.8}
    className="IS1"
    fill={true}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1434%2C1792%2C627%2C0"
  />
  <div
    className="css-view-1dbjc4n IS3"
  >
    <div
      className="css-view-1dbjc4n r-marginBottom-p1pxzi S1"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </div>
    <h3
      aria-level="3"
      className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-marginBottom-d0pm55 IS2 S2"
      role="heading"
    >
      This is tile headline
    </h3>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </div>
</Link>
`;

exports[`tile e wide 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 0px;
}

.IS1 {
  width: 100%;
  margin-bottom: 10px;
}

.IS2 {
  font-size: 20px;
  line-height: 20px;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": "10px",
      "paddingVertical": "15px",
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={0.8}
    className="IS1"
    fill={true}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1434%2C1792%2C627%2C0"
  />
  <div
    className="css-view-1dbjc4n"
  >
    <div
      className="css-view-1dbjc4n r-marginBottom-p1pxzi S1"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </div>
    <h3
      aria-level="3"
      className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontWeight-16dba41 r-marginBottom-p1pxzi IS2 S2"
      role="heading"
    >
      This is tile headline
    </h3>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </div>
</Link>
`;

exports[`tile e without breakpoint should be like small 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-size: 22px;
  font-weight: 400;
  margin-bottom: 5px;
}

.IS1 {
  width: 50%;
}

.IS2 {
  line-height: 22px;
}

.IS3 {
  padding-bottom: 5px;
  padding-left: 10px;
  width: 50%;
}
</style>

<Link
  linkStyle={
    Object {
      "flexDirection": "row",
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={0.8}
    className="IS1"
    fill={true}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1434%2C1792%2C627%2C0"
  />
  <div
    className="css-view-1dbjc4n IS3"
  >
    <div
      className="css-view-1dbjc4n r-marginBottom-p1pxzi S1"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </div>
    <h3
      aria-level="3"
      className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-marginBottom-d0pm55 IS2 S2"
      role="heading"
    >
      This is tile headline
    </h3>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </div>
</Link>
`;
